--- a/src/components/Sayari.css
+++ b/src/components/Sayari.css
@@ -1,8 +1,8 @@
 .slick-prev:before {
-  color: #cd0505 !important;
+  color: #2e8555 !important;
 }
 .slick-next:before {
-  color: #cd0505 !important;
+  color: #2e8555 !important;
 }
 .slider-quote>p{
   color: #2e8555;
